@@ -4,6 +4,10 @@ bobcat (3.12.00)
 
   * All occurrences of Errno in Bobcat were replaced by Exception
 
+  * The class tt(BigInt) received several new members: operator bool,
+    diophantus, and primeFactors. See the bigint(3bobcat) man page for
+    details. 
+
 WIP
 
 bobcat (3.11.01)
